Updatable call types

--- a/index.html
+++ b/index.html
@@ -17,13 +17,27 @@
       <h2>Call Logs</h2>
       <form id="add-call-form">
         <label for="call-type">Call Type:</label>
-        <select id="call-type">
-          <option value="Shots Fired">Shots Fired</option>
-          <option value="Drug Sales">Drug Sales</option>
-          <option value="Robbery">Robbery</option>
-          <option value="Traffic Stop">Traffic Stop</option>
-          <option value="Disturbance">Disturbance</option>
-        </select>
+            <select id="call-type">
+                <option value="Shots Fired">Shots Fired</option>
+                <option value="Drug Sales">Drug Sales</option>
+                <option value="Store Robbery">Store Robbery</option>
+                <option value="House Robbery">House Robbery</option>
+                <option value="Bank Robbery">Bank Robbery</option>
+                <option value="Armored Truck Robbery">Armored Truck Robbery</option>
+                <option value="Traffic Stop">Traffic Stop</option>
+                <option value="Pursuit">Pursuit</option>
+                <option value="Disturbance">Disturbance</option>
+                <option value="Suspicious Activity">Suspicious Activity</option>
+                <option value="Medical Emergency">Medical Emergency</option>
+                <option value="Assault">Assault</option>
+                <option value="Domestic Dispute">Domestic Dispute</option>
+                <option value="Fire">Fire</option>
+                <option value="Vandalism">Vandalism</option>
+                <option value="Theft">Theft</option>
+                <option value="Public Intoxication">Public Intoxication</option>
+                <option value="Gang Activity">Gang Activity</option>
+                <option value="Missing Person">Missing Person</option>
+            </select>
         <button type="submit">Add Call</button>
       </form>
       <ul id="call-list">
