Made it so units are green or red based on availability

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <option value="Disturbance">Disturbance</option>
                 <option value="Suspicious Activity">Suspicious Activity</option>
                 <option value="Medical Emergency">Medical Emergency</option>
+                <option value="Unavailable">Unavailable</option>
             </select>
 
             <input type="text" id="call-location" placeholder="Enter Location" required>
