--- a/index.html
+++ b/index.html
@@ -50,20 +50,16 @@
     
 
     <section id="units">
-      <h2>Active Units</h2>
+      <h2>Active Units<button id="panic-btn">PANIC</button></h2>
       <ul id="unit-list">
         <!-- Active units appear here -->
       </ul>
       <button id="add-unit-btn">Add Unit</button>
     </section>
-
-    <section id="panic">
-      <h2>Panic Buttons</h2>
-      <button id="panic-btn">Trigger Panic</button>
-    </section>
   </main>
   
     <footer>
+        <div class="disclaimer">Warning - flashing lights may cause seizures in individuals with photosensitive epilepsy.</div>
         <p>Designed and Developed by KimuraTrap Studios</p>
         <p>&copy; 2025 KimuraTrap Studios</p>
     </footer>
