updated epilepsy warning - ready to test/use

--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
   </main>
   
     <footer>
-        <div class="disclaimer">Warning - flashing lights may cause seizures in individuals with photosensitive epilepsy.</div>
+        <div class="disclaimer">
+            <h3>⚠️ Epilepsy Warning</h3>
+
+            This application contains rapidly flashing lights and color patterns that may trigger seizures in individuals with photosensitive epilepsy. Viewer discretion is advised.
+
+            If you experience dizziness, altered vision, eye or muscle twitching, or any discomfort, please stop using the flashing feature immediately.
+
+            By enabling the flashing lights, you acknowledge that you understand and accept this risk.
+        </div>
         <p>Designed and Developed by KimuraTrap Studios</p>
         <p>&copy; 2025 KimuraTrap Studios</p>
     </footer>
