--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
   <header>
-    <h1>Los Santos Police Department</h1>
+    <h1>Police Department</h1>
     <h2>Dispatch Center</h2>
-    <h3>Obey and Survive</h3>
     <button id="toggle-lights">Activate Lights</button>
   </header>
 
